--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,9 @@ jobs:
       # Pull changes
       - uses: actions/checkout@v2.3.4
 
+      - name: change dir
+        run: 'cd TempFly'
+
       # Cache artifacts - however this has the downside that we don't get notified of
       # artifact resolution failures like invalid repository
       # Nevertheless the repositories should be more stable and it makes no sense to pull
