--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: change dir
         run: 'cd TempFly'
+      - name: pwd
+        run: 'pwd'
 
       # Cache artifacts - however this has the downside that we don't get notified of
       # artifact resolution failures like invalid repository
